# WSS_Helper

./: .gitignore  pyproject.toml  wss_command_list.py  wss_global_hotkey.py  wss_main_helper.py  wss_main_support_service.py
program/AccessSolution/: accept_solution_documents_list.txt  wss_accept_solution.py
program/CA_Update_Status/: main.py  wss_sqlalchemy.py
program/Convert_XML_WebServicest_to_MD/: XML_to_MD.py  test.txt  work.txt
program/SOAP_helper/: spend.py
program/Selenium_apps/: add_IncommingTypesCokSub.py
pytest/: test_web_service.py
services/: wss_sql_controller.py  wss_webservice_controller.py  wss_webservices_controller_zeep.py
